[tool.poetry]
name = "neural-upscaler"
version = "0.1.0"
description = "Upscale images"
authors = ["Aleksi M"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pytest = "^6.2.5"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
